@@ -16,23 +16,13 @@
 package org.bonitasoft.console.common.server.login.filter;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.Matchers.any;
-import static org.mockito.Matchers.anySetOf;
-import static org.mockito.Matchers.anyString;
-import static org.mockito.Matchers.eq;
-import static org.mockito.Matchers.isA;
-import static org.mockito.Mockito.doReturn;
-import static org.mockito.Mockito.doThrow;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.spy;
-import static org.mockito.Mockito.verify;
+import static org.mockito.Matchers.*;
+import static org.mockito.Mockito.*;
 
 import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-
 import javax.servlet.ServletException;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
@@ -42,8 +32,6 @@ import org.bonitasoft.console.common.server.preferences.properties.DynamicPermis
 import org.bonitasoft.console.common.server.preferences.properties.ResourcesPermissionsMapping;
 import org.bonitasoft.console.common.server.utils.SessionUtil;
 import org.bonitasoft.engine.api.permission.APICallContext;
-import org.bonitasoft.engine.exception.ExecutionException;
-import org.bonitasoft.engine.exception.NotFoundException;
 import org.bonitasoft.engine.session.APISession;
 import org.bonitasoft.engine.session.InvalidSessionException;
 import org.bonitasoft.engine.session.PlatformSession;
@@ -73,22 +61,22 @@ public class RestAPIAuthorizationFilterTest {
     private final RestAPIAuthorizationFilter restAPIAuthorizationFilter = new RestAPIAuthorizationFilter(false);
 
     private final String username = "john";
-    
-    private final long userId = 9l;
+
+    private final long userId = 9L;
 
     @Before
     public void before() {
         doReturn(httpSession).when(request).getSession();
         doReturn("").when(request).getQueryString();
         doReturn(apiSession).when(httpSession).getAttribute(SessionUtil.API_SESSION_PARAM_KEY);
-        doReturn(1l).when(apiSession).getTenantId();
+        doReturn(1L).when(apiSession).getTenantId();
         doReturn(userId).when(apiSession).getUserId();
         doReturn(false).when(apiSession).isTechnicalUser();
         doReturn(username).when(apiSession).getUserName();
     }
 
     private Set<String> initSpy(final RestAPIAuthorizationFilter restAPIAuthorizationFilterSpy) throws ServletException {
-        final Set<String> permissions = new HashSet<String>(Arrays.asList("plop"));
+        final Set<String> permissions = new HashSet<>(List.of("plop"));
         return initSpy(restAPIAuthorizationFilterSpy, permissions);
     }
 
@@ -105,8 +93,8 @@ public class RestAPIAuthorizationFilterTest {
     public void should_checkPermissions_call_dynamic_check_if_secu_is_enabled() throws Exception {
         final RestAPIAuthorizationFilter restAPIAuthorizationFilterSpy = spy(restAPIAuthorizationFilter);
         final Set<String> permissions = initSpy(restAPIAuthorizationFilterSpy);
-        doReturn(true).when(restAPIAuthorizationFilterSpy).isApiAuthorizationsCheckEnabled(1l);
-        final Set<String> dynamicAuthorizations = new HashSet<String>(Arrays.asList("check|className"));
+        doReturn(true).when(restAPIAuthorizationFilterSpy).isApiAuthorizationsCheckEnabled(1L);
+        final Set<String> dynamicAuthorizations = new HashSet<>(List.of("check|className"));
         doReturn(dynamicAuthorizations).when(restAPIAuthorizationFilterSpy).getDeclaredPermissions(anyString(), anyString(),
                 anyString(), any(APIID.class), isA(DynamicPermissionsChecks.class));
         doReturn(true).when(restAPIAuthorizationFilterSpy).dynamicCheck(any(APICallContext.class),
@@ -126,8 +114,8 @@ public class RestAPIAuthorizationFilterTest {
     public void should_checkPermissions_call_static_check_if_secu_is_enabled_and_no_dynamic_permissions_are_defined() throws Exception {
         final RestAPIAuthorizationFilter restAPIAuthorizationFilterSpy = spy(restAPIAuthorizationFilter);
         final Set<String> permissions = initSpy(restAPIAuthorizationFilterSpy);
-        doReturn(true).when(restAPIAuthorizationFilterSpy).isApiAuthorizationsCheckEnabled(1l);
-        final Set<String> emptyDynamicAuthorizations = new HashSet<String>();
+        doReturn(true).when(restAPIAuthorizationFilterSpy).isApiAuthorizationsCheckEnabled(1L);
+        final Set<String> emptyDynamicAuthorizations = new HashSet<>();
         doReturn(emptyDynamicAuthorizations).when(restAPIAuthorizationFilterSpy).getDeclaredPermissions(anyString(), anyString(),
                 anyString(), any(APIID.class), isA(ResourcesPermissionsMapping.class));
         doReturn(true).when(restAPIAuthorizationFilterSpy).staticCheck(any(APICallContext.class), anySetOf(String.class),
@@ -137,17 +125,17 @@ public class RestAPIAuthorizationFilterTest {
 
         //then
         assertThat(isAuthorized).isTrue();
-        verify(restAPIAuthorizationFilterSpy).staticCheck(new APICallContext("GET", "bpm", "case", null), permissions, new HashSet<String>(), username);
+        verify(restAPIAuthorizationFilterSpy).staticCheck(new APICallContext("GET", "bpm", "case", null), permissions, new HashSet<>(), username);
         verify(restAPIAuthorizationFilterSpy, never()).dynamicCheck(any(APICallContext.class), anySetOf(String.class),
                 anySetOf(String.class), any(APISession.class));
     }
-    
+
     @Test
     public void should_not_call_static_check_if_secu_is_enabled_but_session_call_is_always_authorized() throws Exception {
         final RestAPIAuthorizationFilter restAPIAuthorizationFilterSpy = spy(restAPIAuthorizationFilter);
         doReturn("GET").when(request).getMethod();
-        doReturn(true).when(restAPIAuthorizationFilterSpy).isApiAuthorizationsCheckEnabled(1l);
-        final Set<String> emptyDynamicAuthorizations = new HashSet<String>();
+        doReturn(true).when(restAPIAuthorizationFilterSpy).isApiAuthorizationsCheckEnabled(1L);
+        final Set<String> emptyDynamicAuthorizations = new HashSet<>();
         doReturn(emptyDynamicAuthorizations).when(restAPIAuthorizationFilterSpy).getDeclaredPermissions(anyString(), anyString(),
                 anyString(), any(APIID.class), isA(ResourcesPermissionsMapping.class));
         //when
@@ -155,49 +143,7 @@ public class RestAPIAuthorizationFilterTest {
 
         //then
         assertThat(isAuthorized).isTrue();
-        verify(restAPIAuthorizationFilterSpy).isAllwaysAuthorizedResource(eq(request), eq(apiSession), any(APICallContext.class));
-        verify(restAPIAuthorizationFilterSpy, never()).staticCheck(any(APICallContext.class), anySetOf(String.class),
-                anySetOf(String.class), anyString());
-        verify(restAPIAuthorizationFilterSpy, never()).dynamicCheck(any(APICallContext.class), anySetOf(String.class),
-                anySetOf(String.class), any(APISession.class));
-    }
-    
-    @Test
-    public void should_not_call_static_check_if_secu_is_enabled_but_my_profiles_call_is_always_authorized() throws Exception {
-        final RestAPIAuthorizationFilter restAPIAuthorizationFilterSpy = spy(restAPIAuthorizationFilter);
-        doReturn("GET").when(request).getMethod();
-        String queryString = "?p=0&c=200&f=user_id%3D" + userId;
-        doReturn(queryString).when(request).getQueryString();
-        doReturn(true).when(restAPIAuthorizationFilterSpy).isApiAuthorizationsCheckEnabled(1l);
-        final Set<String> emptyDynamicAuthorizations = new HashSet<String>();
-        doReturn(emptyDynamicAuthorizations).when(restAPIAuthorizationFilterSpy).getDeclaredPermissions(anyString(), anyString(),
-                anyString(), any(APIID.class), isA(ResourcesPermissionsMapping.class));
-        //when
-        final boolean isAuthorized = restAPIAuthorizationFilterSpy.checkPermissions(request, "portal", "profile", null);
-
-        //then
-        assertThat(isAuthorized).isTrue();
-        verify(restAPIAuthorizationFilterSpy).isAllwaysAuthorizedResource(eq(request), eq(apiSession), any(APICallContext.class));
-        verify(restAPIAuthorizationFilterSpy, never()).staticCheck(any(APICallContext.class), anySetOf(String.class),
-                anySetOf(String.class), anyString());
-        verify(restAPIAuthorizationFilterSpy, never()).dynamicCheck(any(APICallContext.class), anySetOf(String.class),
-                anySetOf(String.class), any(APISession.class));
-    }
-    
-    @Test
-    public void should_not_call_static_check_if_secu_is_enabled_but_my_user_call_is_always_authorized() throws Exception {
-        final RestAPIAuthorizationFilter restAPIAuthorizationFilterSpy = spy(restAPIAuthorizationFilter);
-        doReturn("GET").when(request).getMethod();
-        doReturn(true).when(restAPIAuthorizationFilterSpy).isApiAuthorizationsCheckEnabled(1l);
-        final Set<String> emptyDynamicAuthorizations = new HashSet<String>();
-        doReturn(emptyDynamicAuthorizations).when(restAPIAuthorizationFilterSpy).getDeclaredPermissions(anyString(), anyString(),
-                anyString(), any(APIID.class), isA(ResourcesPermissionsMapping.class));
-        //when
-        final boolean isAuthorized = restAPIAuthorizationFilterSpy.checkPermissions(request, "identity", "user", APIID.makeAPIID(userId));
-
-        //then
-        assertThat(isAuthorized).isTrue();
-        verify(restAPIAuthorizationFilterSpy).isAllwaysAuthorizedResource(eq(request), eq(apiSession), any(APICallContext.class));
+        verify(restAPIAuthorizationFilterSpy).isAlwaysAuthorizedResource(any(APICallContext.class));
         verify(restAPIAuthorizationFilterSpy, never()).staticCheck(any(APICallContext.class), anySetOf(String.class),
                 anySetOf(String.class), anyString());
         verify(restAPIAuthorizationFilterSpy, never()).dynamicCheck(any(APICallContext.class), anySetOf(String.class),
@@ -209,7 +155,7 @@ public class RestAPIAuthorizationFilterTest {
         doReturn(true).when(apiSession).isTechnicalUser();
         final RestAPIAuthorizationFilter restAPIAuthorizationFilterSpy = spy(restAPIAuthorizationFilter);
         initSpy(restAPIAuthorizationFilterSpy);
-        doReturn(true).when(restAPIAuthorizationFilterSpy).isApiAuthorizationsCheckEnabled(1l);
+        doReturn(true).when(restAPIAuthorizationFilterSpy).isApiAuthorizationsCheckEnabled(1L);
 
         //when
         final boolean isAuthorized = restAPIAuthorizationFilterSpy.checkPermissions(request, "bpm", "case", null);
@@ -226,8 +172,8 @@ public class RestAPIAuthorizationFilterTest {
     public void should_checkPermissions_do_nothing_if_secu_is_disabled() throws Exception {
         final RestAPIAuthorizationFilter restAPIAuthorizationFilterSpy = spy(restAPIAuthorizationFilter);
         initSpy(restAPIAuthorizationFilterSpy);
-        doReturn(false).when(restAPIAuthorizationFilterSpy).isApiAuthorizationsCheckEnabled(1l);
-        final Set<String> dynamicAuthorizations = new HashSet<String>(Arrays.asList("check|className"));
+        doReturn(false).when(restAPIAuthorizationFilterSpy).isApiAuthorizationsCheckEnabled(1L);
+        final Set<String> dynamicAuthorizations = new HashSet<>(List.of("check|className"));
         doReturn(dynamicAuthorizations).when(restAPIAuthorizationFilterSpy).getDeclaredPermissions(anyString(), anyString(),
                 anyString(), any(APIID.class), isA(DynamicPermissionsChecks.class));
         final List<String> resourcePermissions = Arrays.asList("CasePermission", "MyPermission");
@@ -248,7 +194,7 @@ public class RestAPIAuthorizationFilterTest {
     public void should_checkPermissions_return_true_if_static_authorized() throws Exception {
         final RestAPIAuthorizationFilter restAPIAuthorizationFilterSpy = spy(restAPIAuthorizationFilter);
         initSpy(restAPIAuthorizationFilterSpy);
-        doReturn(true).when(restAPIAuthorizationFilterSpy).isApiAuthorizationsCheckEnabled(1l);
+        doReturn(true).when(restAPIAuthorizationFilterSpy).isApiAuthorizationsCheckEnabled(1L);
         doReturn(new HashSet<String>()).when(restAPIAuthorizationFilterSpy).getDeclaredPermissions(anyString(), anyString(),
                 anyString(), any(APIID.class), isA(ResourcesPermissionsMapping.class));
         doReturn(true).when(restAPIAuthorizationFilterSpy).staticCheck(any(APICallContext.class), anySetOf(String.class),
@@ -265,7 +211,7 @@ public class RestAPIAuthorizationFilterTest {
     public void should_checkPermissions_return_false_if_static_not_authorized() throws Exception {
         final RestAPIAuthorizationFilter restAPIAuthorizationFilterSpy = spy(restAPIAuthorizationFilter);
         initSpy(restAPIAuthorizationFilterSpy);
-        doReturn(true).when(restAPIAuthorizationFilterSpy).isApiAuthorizationsCheckEnabled(1l);
+        doReturn(true).when(restAPIAuthorizationFilterSpy).isApiAuthorizationsCheckEnabled(1L);
         doReturn(new HashSet<String>()).when(restAPIAuthorizationFilterSpy).getDeclaredPermissions(anyString(), anyString(),
                 anyString(), any(APIID.class), isA(ResourcesPermissionsMapping.class));
         doReturn(false).when(restAPIAuthorizationFilterSpy).staticCheck(any(APICallContext.class), anySetOf(String.class),
@@ -282,8 +228,8 @@ public class RestAPIAuthorizationFilterTest {
     public void should_checkPermissions_return_true_if_dynamic_authorized() throws Exception {
         final RestAPIAuthorizationFilter restAPIAuthorizationFilterSpy = spy(restAPIAuthorizationFilter);
         initSpy(restAPIAuthorizationFilterSpy);
-        doReturn(true).when(restAPIAuthorizationFilterSpy).isApiAuthorizationsCheckEnabled(1l);
-        final Set<String> dynamicAuthorizations = new HashSet<String>(Arrays.asList("check|className"));
+        doReturn(true).when(restAPIAuthorizationFilterSpy).isApiAuthorizationsCheckEnabled(1L);
+        final Set<String> dynamicAuthorizations = new HashSet<>(List.of("check|className"));
         doReturn(dynamicAuthorizations).when(restAPIAuthorizationFilterSpy).getDeclaredPermissions(anyString(), anyString(),
                 anyString(), any(APIID.class), isA(DynamicPermissionsChecks.class));
         doReturn(true).when(restAPIAuthorizationFilterSpy).dynamicCheck(any(APICallContext.class),
@@ -300,8 +246,8 @@ public class RestAPIAuthorizationFilterTest {
     public void should_checkPermissions_return_false_if_dynamic_not_authorized() throws Exception {
         final RestAPIAuthorizationFilter restAPIAuthorizationFilterSpy = spy(restAPIAuthorizationFilter);
         initSpy(restAPIAuthorizationFilterSpy);
-        doReturn(true).when(restAPIAuthorizationFilterSpy).isApiAuthorizationsCheckEnabled(1l);
-        final Set<String> dynamicAuthorizations = new HashSet<String>(Arrays.asList("check|className"));
+        doReturn(true).when(restAPIAuthorizationFilterSpy).isApiAuthorizationsCheckEnabled(1L);
+        final Set<String> dynamicAuthorizations = new HashSet<>(List.of("check|className"));
         doReturn(dynamicAuthorizations).when(restAPIAuthorizationFilterSpy).getDeclaredPermissions(anyString(), anyString(),
                 anyString(), any(APIID.class), isA(DynamicPermissionsChecks.class));
         doReturn(false).when(restAPIAuthorizationFilterSpy).dynamicCheck(any(APICallContext.class),
@@ -318,137 +264,36 @@ public class RestAPIAuthorizationFilterTest {
     public void should_checkPermissions_parse_the_request() throws Exception {
         doReturn("API/bpm/case/15").when(request).getPathInfo();
         final RestAPIAuthorizationFilter restAPIAuthorizationFilterSpy = spy(restAPIAuthorizationFilter);
-        doReturn(true).when(restAPIAuthorizationFilterSpy).checkPermissions(eq(request), eq("bpm"), eq("case"), eq(APIID.makeAPIID(15l)));
+        doReturn(true).when(restAPIAuthorizationFilterSpy).checkPermissions(eq(request), eq("bpm"), eq("case"), eq(APIID.makeAPIID(15L)));
 
         //when
         restAPIAuthorizationFilterSpy.checkPermissions(request);
 
         //then
-        verify(restAPIAuthorizationFilterSpy).checkPermissions(eq(request), eq("bpm"), eq("case"), eq(APIID.makeAPIID(15l)));
+        verify(restAPIAuthorizationFilterSpy).checkPermissions(eq(request), eq("bpm"), eq("case"), eq(APIID.makeAPIID(15L)));
     }
 
     @Test
-    public void test_staticCheck_authorized() throws Exception {
-        final Set<String> userPermissions = new HashSet<String>(Arrays.asList("MyPermission", "AnOtherPermission"));
+    public void test_staticCheck_authorized() {
+        final Set<String> userPermissions = new HashSet<>(Arrays.asList("MyPermission", "AnOtherPermission"));
         final List<String> resourcePermissions = Arrays.asList("CasePermission", "AnOtherPermission");
         returnPermissionFor("GET", "bpm", "case", null, resourcePermissions);
 
         final boolean isAuthorized = restAPIAuthorizationFilter.staticCheck(new APICallContext("GET", "bpm", "case", null), userPermissions,
-                new HashSet<String>(resourcePermissions), username);
+                new HashSet<>(resourcePermissions), username);
 
         assertThat(isAuthorized).isTrue();
 
     }
 
     @Test
-    public void test_staticCheck_unauthorized() throws Exception {
-        final Set<String> userPermissions = new HashSet<String>(Arrays.asList("MyPermission", "AnOtherPermission"));
+    public void test_staticCheck_unauthorized() {
+        final Set<String> userPermissions = new HashSet<>(Arrays.asList("MyPermission", "AnOtherPermission"));
         final List<String> resourcePermissions = Arrays.asList("CasePermission", "SecondPermission");
         returnPermissionFor("GET", "bpm", "case", null, resourcePermissions);
 
         final boolean isAuthorized = restAPIAuthorizationFilter.staticCheck(new APICallContext("GET", "bpm", "case", null), userPermissions,
-                new HashSet<String>(resourcePermissions), username);
-
-        assertThat(isAuthorized).isFalse();
-    }
-
-    @Test
-    public void test_dynamicCheck_authorized_with_script() throws Exception {
-        final Set<String> dynamicAuthorizations = new HashSet<String>(Arrays.asList("check|className"));
-        final RestAPIAuthorizationFilter restAPIAuthorizationFilterSpy = spy(restAPIAuthorizationFilter);
-        final APICallContext apiCallContext = new APICallContext("GET", "bpm", "case", null, "", "");
-        doReturn(true).when(restAPIAuthorizationFilterSpy).executeScript(apiSession, "className", apiCallContext);
-
-        final boolean isAuthorized = restAPIAuthorizationFilterSpy.dynamicCheck(new APICallContext("GET", "bpm", "case", null, "", ""), new HashSet<String>(),
-                dynamicAuthorizations, apiSession);
-
-        assertThat(isAuthorized).isTrue();
-    }
-
-    @Test
-    public void test_dynamicCheck_authorized_with_profile() throws Exception {
-        final Set<String> dynamicAuthorizations = new HashSet<String>(Arrays.asList("profile|admin", "check|className"));
-        final RestAPIAuthorizationFilter restAPIAuthorizationFilterSpy = spy(restAPIAuthorizationFilter);
-        final APICallContext apiCallContext = new APICallContext("GET", "bpm", "case", null, "", "");
-
-        final boolean isAuthorized = restAPIAuthorizationFilterSpy.dynamicCheck(new APICallContext("GET", "bpm", "case", null, "", ""),
-                new HashSet<String>(Arrays.asList("profile|admin")),
-                dynamicAuthorizations, apiSession);
-
-        assertThat(isAuthorized).isTrue();
-        verify(restAPIAuthorizationFilterSpy, never()).executeScript(apiSession, "className", apiCallContext);
-    }
-
-    @Test
-    public void test_dynamicCheck_authorized_with_user() throws Exception {
-        final Set<String> dynamicAuthorizations = new HashSet<String>(Arrays.asList("user|" + apiSession.getUserName(), "check|className"));
-        final RestAPIAuthorizationFilter restAPIAuthorizationFilterSpy = spy(restAPIAuthorizationFilter);
-        final APICallContext apiCallContext = new APICallContext("GET", "bpm", "case", null, "", "");
-
-        final boolean isAuthorized = restAPIAuthorizationFilterSpy.dynamicCheck(new APICallContext("GET", "bpm", "case", null, "", ""),
-                new HashSet<String>(Arrays.asList("user|" + apiSession.getUserName())),
-                dynamicAuthorizations, apiSession);
-
-        assertThat(isAuthorized).isTrue();
-        verify(restAPIAuthorizationFilterSpy, never()).executeScript(apiSession, "className", apiCallContext);
-    }
-
-    @Test
-    public void test_dynamicCheck_unauthorized_with_script() throws Exception {
-        final Set<String> dynamicAuthorizations = new HashSet<String>(Arrays.asList("check|className"));
-        final RestAPIAuthorizationFilter restAPIAuthorizationFilterSpy = spy(restAPIAuthorizationFilter);
-        final APICallContext apiCallContext = new APICallContext("GET", "bpm", "case", null, "", "");
-        doReturn(false).when(restAPIAuthorizationFilterSpy).executeScript(apiSession, "className", apiCallContext);
-
-        final boolean isAuthorized = restAPIAuthorizationFilterSpy.dynamicCheck(new APICallContext("GET", "bpm", "case", null, "", ""), new HashSet<String>(),
-                dynamicAuthorizations, apiSession);
-
-        assertThat(isAuthorized).isFalse();
-    }
-
-    @Test
-    public void should_dynamicCheck_return_false_if_the_script_execution_fails() throws Exception {
-        final Set<String> dynamicAuthorizations = new HashSet<String>(Arrays.asList("check|className"));
-        final RestAPIAuthorizationFilter restAPIAuthorizationFilterSpy = spy(restAPIAuthorizationFilter);
-        final APICallContext apiCallContext = new APICallContext("GET", "bpm", "case", null, "", "");
-        doThrow(ExecutionException.class).when(restAPIAuthorizationFilterSpy).executeScript(apiSession, "className", apiCallContext);
-
-        final boolean isAuthorized = restAPIAuthorizationFilterSpy.dynamicCheck(new APICallContext("GET", "bpm", "case", null, "", ""), new HashSet<String>(),
-                dynamicAuthorizations, apiSession);
-
-        assertThat(isAuthorized).isFalse();
-    }
-
-    @Test
-    public void should_dynamicCheck_return_false_if_the_script_is_not_found() throws Exception {
-        final Set<String> dynamicAuthorizations = new HashSet<String>(Arrays.asList("check|className"));
-        final RestAPIAuthorizationFilter restAPIAuthorizationFilterSpy = spy(restAPIAuthorizationFilter);
-        final APICallContext apiCallContext = new APICallContext("GET", "bpm", "case", null, "", "");
-        doThrow(NotFoundException.class).when(restAPIAuthorizationFilterSpy).executeScript(apiSession, "className", apiCallContext);
-
-        final boolean isAuthorized = restAPIAuthorizationFilterSpy.dynamicCheck(new APICallContext("GET", "bpm", "case", null, "", ""), new HashSet<String>(),
-                dynamicAuthorizations, apiSession);
-
-        assertThat(isAuthorized).isFalse();
-    }
-
-    @Test
-    public void should_dynamicCheck_return_false_if_the_script_syntax_is_invalid() throws Exception {
-        final Set<String> dynamicAuthorizations = new HashSet<String>(Arrays.asList("anyText"));
-        final RestAPIAuthorizationFilter restAPIAuthorizationFilterSpy = spy(restAPIAuthorizationFilter);
-        final APICallContext apiCallContext = new APICallContext("GET", "bpm", "case", null, "", "");
-        doThrow(NotFoundException.class).when(restAPIAuthorizationFilterSpy).executeScript(apiSession, "className", apiCallContext);
-
-        final boolean isAuthorized = restAPIAuthorizationFilterSpy.dynamicCheck(new APICallContext("GET", "bpm", "case", null, "", ""), new HashSet<String>(),
-                dynamicAuthorizations, apiSession);
-
-        assertThat(isAuthorized).isFalse();
-    }
-
-    @Test
-    public void should_dynamicCheck_return_false_on_resource_with_no_script() throws Exception {
-        final boolean isAuthorized = restAPIAuthorizationFilter.dynamicCheck(new APICallContext("GET", "bpm", "case", null, "", ""), new HashSet<String>(),
-                new HashSet<String>(), apiSession);
+                new HashSet<>(resourcePermissions), username);
 
         assertThat(isAuthorized).isFalse();
     }
@@ -456,12 +301,12 @@ public class RestAPIAuthorizationFilterTest {
     @Test
     public void test_checkPermissions_unauthorized_on_resource_with_id_even_if_permission_in_general_is_there() throws Exception {
         final RestAPIAuthorizationFilter restAPIAuthorizationFilterSpy = spy(restAPIAuthorizationFilter);
-        final Set<String> userPermissions = new HashSet<String>(Arrays.asList("MyPermission", "AnOtherPermission"));
+        final Set<String> userPermissions = new HashSet<>(Arrays.asList("MyPermission", "AnOtherPermission"));
         initSpy(restAPIAuthorizationFilterSpy, userPermissions);
         returnPermissionFor("GET", "bpm", "case", null, Arrays.asList("CasePermission", "AnOtherPermission"));
-        returnPermissionFor("GET", "bpm", "case", Arrays.asList("12"), Arrays.asList("CasePermission", "SecondPermission"));
-        doReturn(true).when(restAPIAuthorizationFilterSpy).isApiAuthorizationsCheckEnabled(1l);
-        final Set<String> emptyDynamicAuthorizations = new HashSet<String>();
+        returnPermissionFor("GET", "bpm", "case", List.of("12"), Arrays.asList("CasePermission", "SecondPermission"));
+        doReturn(true).when(restAPIAuthorizationFilterSpy).isApiAuthorizationsCheckEnabled(1L);
+        final Set<String> emptyDynamicAuthorizations = new HashSet<>();
         doReturn(emptyDynamicAuthorizations).when(restAPIAuthorizationFilterSpy).getDeclaredPermissions(anyString(), anyString(),
                 anyString(), any(APIID.class), isA(DynamicPermissionsChecks.class));
 
@@ -473,11 +318,11 @@ public class RestAPIAuthorizationFilterTest {
     @Test
     public void test_checkPermissions_authorized_on_resource_with_id() throws Exception {
         final RestAPIAuthorizationFilter restAPIAuthorizationFilterSpy = spy(restAPIAuthorizationFilter);
-        final Set<String> userPermissions = new HashSet<String>(Arrays.asList("MyPermission", "AnOtherPermission"));
+        final Set<String> userPermissions = new HashSet<>(Arrays.asList("MyPermission", "AnOtherPermission"));
         initSpy(restAPIAuthorizationFilterSpy, userPermissions);
-        returnPermissionFor("GET", "bpm", "case", Arrays.asList("12"), Arrays.asList("CasePermission", "MyPermission"));
-        doReturn(true).when(restAPIAuthorizationFilterSpy).isApiAuthorizationsCheckEnabled(1l);
-        final Set<String> emptyDynamicAuthorizations = new HashSet<String>();
+        returnPermissionFor("GET", "bpm", "case", List.of("12"), Arrays.asList("CasePermission", "MyPermission"));
+        doReturn(true).when(restAPIAuthorizationFilterSpy).isApiAuthorizationsCheckEnabled(1L);
+        final Set<String> emptyDynamicAuthorizations = new HashSet<>();
         doReturn(emptyDynamicAuthorizations).when(restAPIAuthorizationFilterSpy).getDeclaredPermissions(anyString(), anyString(),
                 anyString(), any(APIID.class), isA(DynamicPermissionsChecks.class));
 
@@ -489,12 +334,12 @@ public class RestAPIAuthorizationFilterTest {
     @Test
     public void test_checkPermissions_resource_with_id_should_check_parent_if_no_rule() throws Exception {
         final RestAPIAuthorizationFilter restAPIAuthorizationFilterSpy = spy(restAPIAuthorizationFilter);
-        final Set<String> userPermissions = new HashSet<String>(Arrays.asList("MyPermission", "AnOtherPermission"));
+        final Set<String> userPermissions = new HashSet<>(Arrays.asList("MyPermission", "AnOtherPermission"));
         initSpy(restAPIAuthorizationFilterSpy, userPermissions);
         final List<String> resourcePermissions = Arrays.asList("CasePermission", "MyPermission");
         returnPermissionFor("GET", "bpm", "case", null, resourcePermissions);
-        doReturn(true).when(restAPIAuthorizationFilterSpy).isApiAuthorizationsCheckEnabled(1l);
-        final Set<String> emptyDynamicAuthorizations = new HashSet<String>();
+        doReturn(true).when(restAPIAuthorizationFilterSpy).isApiAuthorizationsCheckEnabled(1L);
+        final Set<String> emptyDynamicAuthorizations = new HashSet<>();
         doReturn(emptyDynamicAuthorizations).when(restAPIAuthorizationFilterSpy).getDeclaredPermissions(anyString(), anyString(),
                 anyString(), any(APIID.class), isA(DynamicPermissionsChecks.class));
 
@@ -506,13 +351,13 @@ public class RestAPIAuthorizationFilterTest {
     @Test
     public void test_checkPermissions_authorized_on_resource_with_wildcard() throws Exception {
         final RestAPIAuthorizationFilter restAPIAuthorizationFilterSpy = spy(restAPIAuthorizationFilter);
-        final Set<String> userPermissions = new HashSet<String>(Arrays.asList("MyPermission", "AnOtherPermission"));
+        final Set<String> userPermissions = new HashSet<>(Arrays.asList("MyPermission", "AnOtherPermission"));
         initSpy(restAPIAuthorizationFilterSpy, userPermissions);
         final List<String> resourcePermissions = Arrays.asList("CasePermission", "MyPermission");
-        doReturn(new HashSet<String>(resourcePermissions)).when(resourcesPermissionsMapping).getResourcePermissionsWithWildCard("GET", "bpm", "case",
+        doReturn(new HashSet<>(resourcePermissions)).when(resourcesPermissionsMapping).getResourcePermissionsWithWildCard("GET", "bpm", "case",
                 Arrays.asList("12", "instantiation"));
-        doReturn(true).when(restAPIAuthorizationFilterSpy).isApiAuthorizationsCheckEnabled(1l);
-        final Set<String> emptyDynamicAuthorizations = new HashSet<String>();
+        doReturn(true).when(restAPIAuthorizationFilterSpy).isApiAuthorizationsCheckEnabled(1L);
+        final Set<String> emptyDynamicAuthorizations = new HashSet<>();
         doReturn(emptyDynamicAuthorizations).when(restAPIAuthorizationFilterSpy).getDeclaredPermissions(anyString(), anyString(),
                 anyString(), any(APIID.class), isA(DynamicPermissionsChecks.class));
 
@@ -522,12 +367,12 @@ public class RestAPIAuthorizationFilterTest {
     }
 
     private void returnPermissionFor(final String method, final String apiName, final String resourceName, final List<String> resourceQualifiers,
-            final List<String> toBeReturned) {
+                                     final List<String> toBeReturned) {
         if (resourceQualifiers != null) {
-            doReturn(new HashSet<String>(toBeReturned)).when(resourcesPermissionsMapping).getResourcePermissions(method, apiName, resourceName,
+            doReturn(new HashSet<>(toBeReturned)).when(resourcesPermissionsMapping).getResourcePermissions(method, apiName, resourceName,
                     resourceQualifiers);
         } else {
-            doReturn(new HashSet<String>(toBeReturned)).when(resourcesPermissionsMapping).getResourcePermissions(method, apiName, resourceName);
+            doReturn(new HashSet<>(toBeReturned)).when(resourcesPermissionsMapping).getResourcePermissions(method, apiName, resourceName);
         }
     }
 
@@ -617,27 +462,6 @@ public class RestAPIAuthorizationFilterTest {
 
         //when
         restAPIAuthorizationFilter.checkValidCondition(request, response);
-
     }
 
-    @Test
-    public void checkResourceAuthorizationsSyntax_should_return_false_if_syntax_is_invalid() throws Exception {
-        final RestAPIAuthorizationFilter restAPIAuthorizationFilterSpy = spy(restAPIAuthorizationFilter);
-        final Set<String> resourceAuthorizations = new HashSet<String>();
-        resourceAuthorizations.add("any string");
-
-        final boolean isValid = restAPIAuthorizationFilterSpy.checkResourceAuthorizationsSyntax(resourceAuthorizations);
-
-        assertThat(isValid).isFalse();
-    }
-
-    @Test
-    public void checkResourceAuthorizationsSyntax_should_return_true_if_syntax_is_valid() throws Exception {
-        final RestAPIAuthorizationFilter restAPIAuthorizationFilterSpy = spy(restAPIAuthorizationFilter);
-        final Set<String> resourceAuthorizations = new HashSet<String>(Arrays.asList("user|any.username", "profile|any.profile", "check|className"));
-
-        final boolean isValid = restAPIAuthorizationFilterSpy.checkResourceAuthorizationsSyntax(resourceAuthorizations);
-
-        assertThat(isValid).isTrue();
-    }
 }
